# easy_mcl

./: CMakeLists.txt  README.md  \  package.xml
config/: config.rviz
launch/: remote_desktop.launch
map/: global_map (3番目のコピー).pgm  global_map (4 番目のコピー).pgm  global_map (5 番目のコピー).pgm  global_map (コピー).pgm  global_map (別のコピー).pgm  global_map.pgm  local_map.pgm  map.yaml
resources/precasting/: 0.csv  1.csv  10.csv  100.csv  101.csv  102.csv  104.csv  105.csv  107.csv  108.csv  11.csv  110.csv  111.csv  112.csv  114.csv  115.csv  116.csv  117.csv  119.csv  120.csv  121.csv  123.csv  124.csv  126.csv  128.csv  13.csv  130.csv  132.csv  133.csv  134.csv  136.csv  138.csv  139.csv  140.csv  141.csv  142.csv  143.csv  144.csv  145.csv  146.csv  (+575 more)
src/: main.cpp  pose_pub.cpp
