<?xml version="1.0"?>
<package format="2">
  <name>easy_mcl</name>
  <version>0.0.0</version>
  <description>The easy_mcl package</description>

  <maintainer email="ryo.okazaki.0929@gmail.com">Ryo Okazaki</maintainer>

  <license>MIT</license>

  <url type="repository">https://github.com/zaki0929/easy_mcl.git</url>

  <author email="ryo.okazaki.0929@gmail.com">Ryo Okazaki</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen</build_depend>
  <build_depend>opencv3</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>eigen</build_export_depend>
  <build_export_depend>opencv3</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>opencv2</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf</exec_depend>

</package>
